fixed the page overflow

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 body {
     width: 100%;
+    max-height: 100vh;
 }
 
 .container {
@@ -17,6 +18,7 @@ body {
 .sidebar {
     grid-area: 1 / 1 / 3 / 2;
     background-color: red;
+    max-height: 100vh;
 }
 
 .main {
@@ -139,22 +141,30 @@ body {
 .content {
     display: grid;
     grid-template: 1fr / 3fr 1fr;
-    padding: 40px;
+    padding: 20px;
 }
 
 #projects {
     display: grid;
-    grid-template: 60px 1fr /1fr;
+    grid-template: 30px 1fr /1fr;
+
 }
 
 .projectContainer {
     display: grid;
     grid-template: 1fr 1fr 1fr / 1fr 1fr;
+    padding: 0px 0px 0px 0px;
 }
 
 .projectCard {
     display: grid;
-    grid-template: 3fr 1fr / 1fr;
+    grid-template: 1fr 30px / 1fr;
+    background-color: antiquewhite;
+    padding: 20px;
+    
+}
+
+.projectContent {
 }
 
 #info {
@@ -195,7 +205,7 @@ body {
 
 .trendingCard {
     display: grid;
-    grid-template: 50px 50px 50px 50px / 1fr;
+    grid-template: 1fr 1fr 1fr 1fr / 1fr;
     padding: 15px 30px;
     background-color: blue;
 }
@@ -203,9 +213,15 @@ body {
 .trendingUser {
     display: grid;
     grid-template: 1fr / 32px 1fr;
+    align-items: center;
+    gap: 10px;
+}
+
+.trendingUser h5{
+    font-size: 20px;
 }
 
 .trendingUser i {
-    font-size: 32px;
+    font-size: 36px;
 }
 
